--- a/CRMProductDownload/Views/Item/Index.cshtml
+++ b/CRMProductDownload/Views/Item/Index.cshtml
@@ -3,10 +3,6 @@
 @using System.Text.RegularExpressions
 @using DotNetNuke.Web.Mvc.Helpers
 
-<script src="~/Scripts/jquery-3.6.0.js"></script>
-<script src="~/Scripts/bootstrap.js"></script>
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
-
 <div id="Items-@Dnn.ModuleContext.ModuleId">
 
     <form asp-action="Item" method="Index">
@@ -125,6 +121,7 @@
                             <div>
                                 <a href="@Url.Action("Edit", "Item", new { ctl = "Edit", itemId = item.ItemId })">@Dnn.LocalizeString("EditItem")</a>
                                 <a href="@Url.Action("Delete", "Item", new { itemId = item.ItemId })">@Dnn.LocalizeString("DeleteItem")</a>
+                                <a href="@Url.Action("ViewLog", "Item", new { itemId = item.ItemId })">@Dnn.LocalizeString("ViewLog")</a>
                                 @{
 
                                     if (item.ItemLatest == "true" && item.ItemPublished == "true")
