--- a/CRMProductDownload/module.css
+++ b/CRMProductDownload/module.css
@@ -1,9 +1,9 @@
 .dnnPrimaryAction, .dnnFormItem input[type="submit"], a.dnnPrimaryAction {
-    border-color: #f44336;
-    background: #f44336;
+    border-color: #FF0000;
+    background: #FF0000;
     background: -moz-linear-gradient(top, #358eea 0%, #2170cd 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f44336), color-stop(100%,#e91e63));
-    background: -webkit-linear-gradient(top, #f44336 0%,#e91e63 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FF0000), color-stop(100%,#e91e63));
+    background: -webkit-linear-gradient(top, #FF0000 0%,#e91e63 100%);
     background: linear-gradient(top, #358eea 0%,#2170cd 100%);
     -webkit-box-shadow: 0px 1px 0px 0px rgb(0 0 0 / 60%), inset 0px 1px 0px 0px rgb(255 255 255 / 40%);
     box-shadow: 0px 1px 0px 0px rgb(0 0 0 / 60%), inset 0px 1px 0px 0px rgb(255 255 255 / 40%);
@@ -12,27 +12,20 @@
 }
 
     .dnnPrimaryAction:hover, .dnnFormItem input[type="submit"]:hover, a.dnnPrimaryAction:hover {
-        border-color: #f44336;
-        background: #f44336;
-        background: -moz-linear-gradient(top, #358eea 0%, #2170cd 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f44336), color-stop(100%,#e91e63));
-        background: -webkit-linear-gradient(top, #f44336 0%,#e91e63 100%);
-        background: linear-gradient(top, #358eea 0%,#2170cd 100%);
-        -webkit-box-shadow: 0px 1px 0px 0px rgb(0 0 0 / 60%), inset 0px 1px 0px 0px rgb(255 255 255 / 40%);
-        box-shadow: 0px 1px 0px 0px rgb(0 0 0 / 60%), inset 0px 1px 0px 0px rgb(255 255 255 / 40%);
+        border-color: #FF0000;
+        background: #FF0000; /* Old browsers */
+        background: -moz-linear-gradient(top, #ff6161 0%, #FF0000 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6cb6f3), color-stop(100%,#4387d2)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top, #ff6161 0%,#FF0000 100%); /* Chrome10+,Safari5.1+ */
+        background: linear-gradient(top, #FF0000 0%,#4387d2 100%); /* W3C */
         color: white;
-        text-shadow: 0px -1px 0px #f44336;
     }
 
-    .dnnPrimaryAction:active, .dnnFormItem input[type="submit"]:active, a.dnnPrimaryAction:active {
-        border-color: #f44336;
-        background: #f44336;
-        background: -moz-linear-gradient(top, #358eea 0%, #2170cd 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f44336), color-stop(100%,#e91e63));
-        background: -webkit-linear-gradient(top, #f44336 0%,#e91e63 100%);
-        background: linear-gradient(top, #358eea 0%,#2170cd 100%);
-        -webkit-box-shadow: 0px 1px 0px 0px rgb(0 0 0 / 60%), inset 0px 1px 0px 0px rgb(255 255 255 / 40%);
-        box-shadow: 0px 1px 0px 0px rgb(0 0 0 / 60%), inset 0px 1px 0px 0px rgb(255 255 255 / 40%);
-        color: white;
-        text-shadow: 0px -1px 0px #f44336;
+    .dnnPrimaryAction[disabled], .dnnPrimaryAction[disabled]:hover, .dnnPrimaryAction[disabled]:active {
+        background: #ccc !important;
+        border: none !important;
+        -webkit-box-shadow: none !important;
+        box-shadow: none !important;
+        color: #aaa !important;
+        text-shadow: none;
     }
