--- a/CRMProductDownload/Views/Item/Index.cshtml
+++ b/CRMProductDownload/Views/Item/Index.cshtml
@@ -5,15 +5,15 @@
 <div id="Items-@Dnn.ModuleContext.ModuleId">
 
     <form asp-action="Item" method="Index">
-        
+
+
+        <h1>Product Downloads</h1>
+        <hr />
+        <div class="alert alert-dark" role="alert">
+            The software you are about to download is subject to export control laws and regulations. By downloading this software, you agree that you will not knowingly, without prior written authorization from the competent government authorities, export or reexport - directly or indirectly - any software downloaded from this website to any prohibited destination, end-user, or end-use.
+        </div>
+
         <center>
-            <h1>Product Downloads</h1>
-            <hr />
-            <div class="alert alert-dark" role="alert">
-                The software you are about to download is subject to export control laws and regulations. By downloading this software, you agree that you will not knowingly, without prior written authorization from the competent government authorities, export or reexport - directly or indirectly - any software downloaded from this website to any prohibited destination, end-user, or end-use.
-            </div>
-
-
             <div class="btn-group">
 
                 @{
@@ -81,10 +81,10 @@
         </center>
         <hr />
         <div id="searchItems" class="dnnFormItem">
+            <input type="text" style="height:35px" name="SearchString" value="@ViewData["CurrentFilter"]" />
             <input type="submit" value="Search" class="btn btn-lg btn-primary" />
-            <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
         </div>
-        
+
     </form>
     <table class="table table-striped table-hover">
         <tr>
