--- a/CRMProductDownload/Views/Item/Index.cshtml
+++ b/CRMProductDownload/Views/Item/Index.cshtml
@@ -2,6 +2,7 @@
 
 @using System.Text.RegularExpressions
 @using DotNetNuke.Web.Mvc.Helpers
+
 <div id="Items-@Dnn.ModuleContext.ModuleId">
 
     <form asp-action="Item" method="Index">
@@ -81,9 +82,12 @@
         </center>
         <hr />
         <div id="searchItems" class="dnnFormItem">
+            <input type="submit" value="Platform" class="btn btn-lg btn-primary" />
+            @Html.DropDownList("platforms", (IEnumerable<SelectListItem>)ViewBag.Platforms)
             <input type="text" style="height:35px" name="SearchString" value="@ViewData["CurrentFilter"]" />
             <input type="submit" value="Search" class="btn btn-lg btn-primary" />
         </div>
+
 
     </form>
     <table class="table table-striped table-hover">
